# FerrusGate-Lite

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config.toml  seed.sh  seed.sql
docs/: API_USAGE.md  CONFIG_SYSTEM_IMPLEMENTATION.md  QUICKSTART.md  swagger.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20251113_000001_initial_database.rs  m20251114_000001_add_user_role.rs  m20251114_000002_create_app_settings.rs  m20251114_000003_create_invite_codes.rs  m20251114_000004_create_config_audit_logs.rs  m20251114_000005_add_user_management_fields.rs  m20251114_000006_add_runtime_config.rs
migration/src/storage/entities/: access_tokens.rs  authorization_codes.rs  mod.rs  o_auth_clients.rs  prelude.rs  refresh_tokens.rs  users.rs
src/: errors.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/middleware/: admin.rs  auth.rs  mod.rs
src/api/services/: admin_user_service.rs  auth_service.rs  health.rs  invite_service.rs  mod.rs  oauth_service.rs  oidc_service.rs  settings_service.rs  user_service.rs
src/cache/: composite.rs  memory_cache.rs  mod.rs  redis_cache.rs  traits.rs
src/config/: args.rs  impl.rs  loader.rs  mod.rs  structs.rs
src/runtime/: mod.rs  server.rs  shutdown.rs  startup.rs
src/security/: jwt.rs  mod.rs  password.rs  token.rs
src/storage/: backend.rs  backend_tests.rs  connection.rs  mod.rs  repository.rs
src/storage/backends/: audit.rs  authorization.rs  config.rs  invite.rs  mod.rs  oauth.rs  user.rs
src/storage/entities/: access_tokens.rs  app_settings.rs  authorization_codes.rs  config_audit_logs.rs  invite_codes.rs  mod.rs  o_auth_clients.rs  prelude.rs  refresh_tokens.rs  users.rs
src/system/: logging.rs  mod.rs  panic_handler.rs
