[package]
name = "ferrusgate-lite"
version = "0.0.1"
description = "A lightweight version of FerrusGate."
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2024"

# 优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
lto = false

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
actix-web = "4.11.0"
actix-service = "2.0.3"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2.3"
tracing-attributes = "0.1.29"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
async-trait = "0.1.89"
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "macros"] }
moka = { version = "0.12.10", default-features = false, features = ["future"] }
colored = "3.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "mysql", "chrono"] }
redis = { version = "0.32.2", features = ["tokio-comp", "tokio-rustls-comp", "aio"] }
rustls = "0.23.28"
toml = "0.9"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
thiserror = "2.0"
bcrypt = "0.16"
jsonwebtoken = "9.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
